--- a/Desktop/personalSite/personal-site/src/App.css
+++ b/Desktop/personalSite/personal-site/src/App.css
@@ -15,3 +15,11 @@
   width: 100vw;
   height: calc(100vh - 15vh);
 }
+th {
+  text-align: center;
+  border: 1px solid black;
+  background: #018ded;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+}
