--- a/Desktop/personalSite/personal-site/src/components/Navbar.css
+++ b/Desktop/personalSite/personal-site/src/components/Navbar.css
@@ -1,7 +1,7 @@
 
 .nav-link{
     text-decoration: none;
-    padding: 5vh
+    padding: 3vh
     
 }
 .nav-link:hover{
@@ -25,7 +25,14 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 10px 30px;
     box-sizing: border-box;
 }
 
+.mobile{
+    width: 100vw;
+    height: 15vh;
+    position: relative;
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+}
