--- a/Desktop/personalSite/personal-site/src/components/Message.css
+++ b/Desktop/personalSite/personal-site/src/components/Message.css
@@ -9,3 +9,13 @@
     border-radius: 10%;
     justify-content: center;
 }
+
+.info{
+    justify-content: center;
+    padding: 2vh .5vh;
+    display: flex;
+}
+
+.personal{
+    float: left;
+}
