--- a/Desktop/personalSite/personal-site/src/pages/style.css
+++ b/Desktop/personalSite/personal-site/src/pages/style.css
@@ -1,7 +1,12 @@
-html{
+html {
     font-size: 62.25%;
 }
 
-.about{
+.about {
     font-size: 2vh;
+}
+
+@media (max-width: 600px) {
+    .span {font-size: 1.5vh;}
+    .about {font-size: 1.5vh; }
 }
