Background Color and Socials
Summary of chages:
Add background color
Introduce SocialMedia Component for contact icons to front page

--- a/Desktop/personalSite/personal-site/src/components/components.css
+++ b/Desktop/personalSite/personal-site/src/components/components.css
@@ -12,3 +12,13 @@
     left: 60%;
     margin-left:-150px;
 }
+
+.contactLink{
+    margin: 3px;
+}
+
+.socialMedia{
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+}
